fixed spacing

--- a/main.css
+++ b/main.css
@@ -1,3 +1,4 @@
+
 body{
     background-color: #2528d0;
     margin:0;
@@ -9,7 +10,7 @@ body{
 header{
   position: fixed;
   width:100%;
-  height: 80px; 
+  height: 10%; 
   background-color: white; 
   z-index: 1000; 
   font-family: "DM Serif Display", serif;
@@ -56,11 +57,9 @@ ul {
     pointer-events: none;
   }
   #aboutSection{
-    padding: 100px 10px  100px;
-  
-    margin: 0;
+    padding: 5%;
     background-color: #DCC7BE;
-    height: 800px;
+    min-height: 110%;
 
 
   }
@@ -68,7 +67,7 @@ ul {
  
     margin: 0;
     background-color: #580A0A;
-    height: 800px;
+    min-height: 100%;
     font-family: "DM Serif Display", serif;
     font-weight: 400;
     font-style: normal;
@@ -78,51 +77,61 @@ ul {
   #contactSection{
     margin: 0;
     background-color:#ffffff;
-    height: 800px;
+    min-height: 100%;
     font-family: "DM Serif Display", serif;
     font-weight: 400;
     font-style: normal;
 
   }
   #aboutTitle{
+      font-size: 150px;
+
+    font-size: 10vw;
     text-align: center;
-    font-size: 150px;
     color:rgb(255, 255, 255);
      font-family: "DM Serif Display", serif;
     font-weight: 400;
     font-style: normal;
+    padding-top: 10%;
 
     
   }
   #aboutText{
-    width: 500px;
+   
     text-align:left;
+    
     font-size: 20px;
+    font-size: 1.5vw;
     font-family: "Literata", serif;
     font-optical-sizing: auto;
     font-weight: 500;
     font-style: normal;
-    margin-left: 200px;
+    margin-left: 30%;
   }
   #projectsText{
     
-    padding: 200px;
+    padding: 20%;
     font-size: 50px;
+    font-size: 6vw;
     color:rgb(255, 255, 255);
+
     
   }
   #contactText{
-    
     color: rgb(85, 81, 81);
     font-size: 50px;
     text-align:center;
     padding: 100px;
+    font-size: 5vw;
+
 
 
 
   }
   .contactinfo{
     font-size: 30px;
+    font-size: 5vw;
+
     text-align:center;
     text-align: center;
   }
@@ -131,20 +140,22 @@ ul {
   }
   .carousel-wrapper {
 
-    margin-left: 50%;
+    margin-left: 10%;
     display: flex;
-    margin: 100px;
+    margin: 10%;
+    text-align: right;
    
   }
   
   #myCarousel {
-    height: 600px;
-    width: 600px; 
+    height: 90%;
+    width: 70%; 
+  
   }
   
   .carousel-img {
-    max-height: 500px;
-    width: 600px; 
+    max-height: 90%;
+    width: 70%; 
     display: block;
     margin: 0 auto;
           
@@ -156,11 +167,15 @@ p{
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
+  font-size: 1vw;
+
 
   }
 
 .white {
    color: white;
+   font-size: 1.5vw;
+
   }
 
 .dm-serif-display-regular {
@@ -176,6 +191,6 @@ p{
 }
 #portrait{
 text-align: right;
-padding-right: 200px;
+margin-right: 30%;
    
 }
